--- a/src/app/admin/filament/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/admin/filament/confirm-dialog/confirm-dialog.component.html
@@ -47,9 +47,9 @@
             <input matInput
                    [(ngModel)]="data.filamentTrackingNumber"
                    formControlName="filamentTrackingNumber">
-            <mat-error *ngIf="f.filamentTrackingNumber.hasError('required')">
+            <!-- <mat-error *ngIf="f.filamentTrackingNumber.hasError('required')">
                 Tracking Number is <strong>required</strong>
-            </mat-error>
+            </mat-error> -->
         </mat-form-field>
         <mat-form-field class="ml-md-4">
             <mat-label>Ημερ/νια Αποστολής</mat-label>
