--- a/src/app/admin/filament/filament.component.html
+++ b/src/app/admin/filament/filament.component.html
@@ -22,7 +22,7 @@
                            [columns]="columns"
                            [rows]="users"
                            [rowsPerPage]="2147483647"
-                           [defaultSortField]="'lastName'"
+                           [defaultSortField]="'latestShippedDate'"
                            [defaultSortDirection]="'Desc'"
                            [showFooter]="'false'"
                            [emptyMessage]="'Δεν υπάρχει κάποιος χρήστης που να έχει ζητήσει filament!'"
