--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-﻿<div class="container">
+﻿<div class="container pb-4">
     <div class="col-md-6 offset-md-3 py-5">
         <div class="card">
             <h4 class="card-header text-center">
@@ -69,3 +69,79 @@
         </a>
     </div>
 </div>
+
+<!-- Start fact Area -->
+<section class="facts-area section-gap mt-5"
+         id="facts-area">
+    <div class="container">
+        <div class="row d-flex justify-content-between">
+            <div class="col-lg-3 col-md-12 pb-md-3 single-fact"
+                 data-wow-duration="1s">
+                <h1 class="counter">2500+</h1>
+                <p>Εθελοντές</p>
+            </div>
+            <div class="col-lg-3 col-md-12 pb-md-3 single-fact"
+                 data-wow-duration="1s"
+                 data-wow-delay=".3s">
+                <h1 class="counter">10000+</h1>
+                <p>3D Ασπίδες</p>
+            </div>
+            <div class="col-lg-3 col-md-12 single-fact"
+                 data-wow-duration="1s">
+                <h1 class="counter">18</h1>
+                <p>Φορείς</p>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- end fact Area -->
+
+<!-- Start services Area -->
+<section class="services-area section-gap">
+    <div class="container">
+        <div class="row d-flex justify-content-center">
+            <div class="menu-content  col-lg-7">
+                <div class="title text-center">
+                    <h1 class="mb-10">Δυνατότητες</h1>
+                    <p>Πως να αξιοποιήσεις αυτή την εφαρμογή</p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-4 col-md-6">
+                <div class="single-services">
+                    <span class="material-icons">
+                        local_shipping
+                    </span>
+                    <h4>Καταγραφή Μετακίνησης Υλικών</h4>
+                    <p>
+                        Ενημέρωσε το 3DHub για την αποστολή του δέματος σου και ενημερώσου για την παραλαβή του.
+                    </p>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+                <div class="single-services">
+                    <span class="material-icons">
+                        query_builder
+                    </span>
+                    <h4>Πρόσφατη Δραστηριότητα</h4>
+                    <p>
+                        Δες που βρίσκεται το δέμα με τις εκτυπώσεις σου μέχρι να φτάσει στο 3DHub και πότε σου στάλθηκε καινούργιο υλικό για να συνεχίσεις τις εκτυπώσεις σου.
+                    </p>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+                <div class="single-services">
+                    <span class="material-icons">
+                        print
+                    </span>
+                    <h4>Παρέλαβε Filament</h4>
+                    <p>
+                        Όταν φύγει το πλαστικό σου από το 3DHub μπορείς να δεις την ακριβή ημερομηνία και το εντοπίσεις το με το tracking number του.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- End services Area -->
