--- a/src/app/admin/users/users.component.html
+++ b/src/app/admin/users/users.component.html
@@ -1,8 +1,6 @@
 <div class="card mt-4">
     <h4 class="card-header">Χρήστες</h4>
     <div class="card-body">
-        <div *ngIf="loading"
-             class="spinner-border spinner-border-sm"></div>
         <div class="row">
             <div class="col-12">
                 <button class="btn btn-primary"
@@ -16,14 +14,15 @@
             </div>
         </div>
         <hr />
+        <div *ngIf="loading"
+             class="spinner-border spinner-border-sm"></div>
         <div class="col-12 mt-3 p-0">
             <app-list-view [clientSide]="true"
                            [columns]="columns"
                            [rows]="users"
-                           [rowsPerPage]="2147483647"
+                           [rowsPerPage]="10"
                            [defaultSortField]="'lastName'"
                            [defaultSortDirection]="'Desc'"
-                           [showFooter]="'false'"
                            (search)="getUsers($event)"
                            [canFilter]="true"
                            #usersList>
