--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,8 +1,6 @@
 ﻿<div class="card mt-4">
     <h4 class="card-header">{{currentUser.firstName}} {{currentUser.lastName}}</h4>
     <div class="card-body">
-        <div *ngIf="loading"
-             class="spinner-border spinner-border-sm"></div>
         <div class="row">
             <div class="col-12 d-flex">
                 <div class="flex-grow-1">
@@ -22,6 +20,8 @@
             </div>
         </div>
         <hr />
+        <div *ngIf="loading"
+             class="spinner-border spinner-border-sm"></div>
         <div class="row text-center text-nowrap font-weight-bold">
             <div class="col-3"></div>
             <div class="col-3">
@@ -44,13 +44,13 @@
         </div>
         <hr />
         <div class="col-12 mt-3 p-0">
-            <app-list-view [clientSide]="true"
+                <h5 class="mt-2"><span class="fa fa-clock-o ion-clock float-right"></span>Ενεργές Αποστολές Εθελοντών</h5>
+                <app-list-view [clientSide]="true"
                            [columns]="columns"
                            [rows]="pendingUsers"
-                           [rowsPerPage]="2147483647"
+                           [rowsPerPage]="10"
                            [defaultSortField]="'dateShipped'"
                            [defaultSortDirection]="'Desc'"
-                           [showFooter]="'false'"
                            (search)="getUsersWithShipments($event)"
                            [canFilter]="true"
                            #shipmentsList>
